--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     <div class="first">
     <h1> 420 news</h1>
 <h2><b><pre>WORLD'S NO. 1 NEWS CHANNEL</pre></b></h2>
-    <pre> आपके अपने गाव में आपके भाई भोली ने एक <a href="https://www.youtube.com/channel/UCv_PTb1GZCitWJCjMFcsFfQ" >YOUTUBE</a>  चैनल की शुरुआत की है कृपया करके इसकी सभी विडियो देखे व् इसे शफल बनाये </pre>
+    <pre> आपके अपने गाव में आपके भाई भोली ने एक <a href="https://www.youtube.com/channel/UCv_PTb1GZCitWJCjMFcsFfQ" >YOUTUBE</a>
+    चैनल की शुरुआत की है कृपया करके इसकी सभी विडियो देखे व् इसे शफल बनाये </pre>
 <a href="https://www.youtube.com/channel/UCv_PTb1GZCitWJCjMFcsFfQ"> 420 NEWS</a>
 <br>
     </div>
 <br>
-<iframe  width="560" height="315" src="https://www.youtube.com/embed/741ocprHSMc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe  src="https://www.youtube.com/embed/741ocprHSMc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
     <img src="road.jpg" alt="420 NEWS" height="200" >
